# trashbin

./: .gitignore  .gitmodules  README.md
cuda/: .gitignore
cuda/cuda-with-cpp/: CMakeLists.txt  example.cu  example.h  main.cc
cuda/template/: Makefile
cuda/tutorial/: Makefile  tutorial
deno/: complex.ts
envoy/: Dockerfile.app  docker-compose.yaml
envoy/app/: Dockerfile  go.mod  main.go
envoy/app/proto/: build.sh
envoy/envoy/: config.yaml
flutter/: .gitignore
flutter/startup_namer/lib/: main.dart
go/a-tour-of-go/: README.md
go/a-tour-of-go/basics/: named-results.go  numeric-constants.go  type-inference.go  variables.go
go/a-tour-of-go/flowcontrol/: exercise-loops-and-functions.go  forever.go
go/rate-limiter/: go.mod  main.go  rate_limiter.go
nextjs/next-chakra-ui/: package.json
nextjs/next-learn/: .gitignore  package.json
nextjs/next-learn/pages/: index.jsx
nextjs/next-ts/: package.json
openacc/: .gitignore
openacc/hello-openacc/: CMakeLists.txt  Dockerfile  main.cpp
python/algorithms/: binary_tree.py
python/monkeytype_handson/: Pipfile
python/tcpip_socket_connection/: README.md  client.py  run  server.py
quantum-annealing/: Pipfile
quantum-computing/blueqat-tutorial/: pyproject.toml
quantum-computing/blueqat-tutorial/notebooks/: 001_basic_one_qubit.ipynb  002_basic_two_qubits.ipynb  003_basic_superposition.ipynb  004_basic_entanglement.ipynb
rust/guessing_game/: Cargo.toml
typescript/hello-react-redux-ts-electron/: README.md  main.js  package.json  tsconfig.json  webpack.config.js
wasm/go-wasm-hello/: .gitignore  Makefile  go.mod  main.wasm
(+25 files in other folders)
