[tool.poetry]
name = "blueqat-tutorial"
version = "0.1.0"
description = ""
authors = ["Kotaro Inoue <k.musaino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
blueqat = "^0.3.13"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
